--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "sequelize": "^3.23.3"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "dotenv": "^2.0.0",
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint-plugin-react": "^5.1.1",
+    "mocha": "^2.5.3"
   }
 }
