--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "3.9.3"
   },
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
